include/engine/ecs/Components.h

        // ---------------------------------- Core utility/tag components ----------------------------------

        // Lightweight name (fixed-size). Avoids std::string to remain trivially copyable.
        struct Name {
        public:
            // UTF-8 bytes, null-terminated if shorter than buffer. Keep small for cache.
            char Value[64] = {0};
        };
        // ---------------------------------- Layers and Transforms ----------------------------------
        // Layers: one component holding a small integer id per entity
        struct Layer { 
        public:
            uint16_t Id = 0; 
        };
        // Optional matrices output for cameras (computed by CameraSystem)
        struct CameraMatrices {
        public:
            Matrix4x4 View{};
            Matrix4x4 Projection{};
            Matrix4x4 ViewProjection{};
        };
        struct AudioSource {
        public:
            uint32_t CueId = 0;
            float Volume = 1.0f;
            float Pitch = 1.0f;
            bool Loop = false;
        };