scripts/GrapeEngine.ScriptAPI/Objects/Components.cs


[StructLayout(LayoutKind.Sequential)]
public struct CameraMatrices
{
    public Matrix4x4 View;
    public Matrix4x4 Projection;
    public Matrix4x4 ViewProjection;
}

// ---------------------------------- Audio Components ----------------------------------

[StructLayout(LayoutKind.Sequential)]
public struct AudioSource
{
    public uint CueId;
    public float Volume;
    public float Pitch;
    public bool Loop;
    public bool PlayOnStart;
    public bool Spatial3D;

    public AudioSource(uint cueId)
    {
        CueId = cueId;
        Volume = 1.0f;
        Pitch = 1.0f;
        Loop = false;
        PlayOnStart = false;
        Spatial3D = true;
    }
}

// ---------------------------------- Additional Types ----------------------------------

[StructLayout(LayoutKind.Sequential)]
public struct Layer
{
    public ushort Id;
}

[StructLayout(LayoutKind.Sequential)]
public struct Color
{
    public float R, G, B, A;

    public Color(float r, float g, float b, float a = 1f)
    {
        R = r;
        G = g;
        B = b;
        A = a;
    }

    public static Color White => new(1, 1, 1, 1);
    public static Color Black => new(0, 0, 0, 1);
    public static Color Red => new(1, 0, 0, 1);
    public static Color Green => new(0, 1, 0, 1);
    public static Color Blue => new(0, 0, 1, 1);
    public static Color Yellow => new(1, 1, 0, 1);
    public static Color Cyan => new(0, 1, 1, 1);
    public static Color Magenta => new(1, 0, 1, 1);
}

[StructLayout(LayoutKind.Sequential)]
public struct Matrix4x4
{
    // Row-major 4x4 matrix
    public float M11, M12, M13, M14;
    public float M21, M22, M23, M24;
    public float M31, M32, M33, M34;
    public float M41, M42, M43, M44;
}

/// <summary>
/// Component type registry using compile-time hash matching.
/// Type hashes MUST match the C++ side component type IDs.
/// </summary>
internal static class ComponentTypeRegistry
{
    // FNV-1a hash function - matches C++ ComponentType::Hash()
    private static uint FNV1aHash(string str)
    {
        // FNV-1a prime and offset
        const uint fnvPrime = 0x01000193;
        const uint fnvOffset = 0x811C9DC5;

        var hash = fnvOffset;
        foreach (var c in str)
        {
            hash ^= c;
            hash *= fnvPrime;
        }

        return hash;
    }

    /// <summary>
    /// Get the type hash for a component type.
    /// </summary>
    /// <typeparam name="T"></typeparam>
    /// <returns></returns>
    public static uint GetTypeHash<T>() where T : unmanaged
    {
        var name = typeof(T).Name;
        var hash = FNV1aHash(name);

        // Uncomment this for debugging
        // Log the computed type name and hash to help debug mismatches with the native side
        // Logging.Log($"ComponentTypeRegistry: Type '{name}' -> Hash {hash}", LogLevel.Debug);

        // Uncomment this and replacement the if statement to debug unexpected primitive types
        // So if an unexpected primitive type like Boolean is being used as a component type,
        // log a stacktrace so we can find the call-site that requested it.
        // if (name == "Boolean")
        // {
        //     try
        //     {
        //         var st = new StackTrace(1, true).ToString();
        //         Logging.Log($"ComponentTypeRegistry: {name} requested from:\n{st}", LogLevel.Error);
        //     }
        //     catch (Exception ex)
        //     {
        //         // If stacktrace capture fails, log a warning (new StackTrace())
        //         Logging.Log($"ComponentTypeRegistry: Failed to capture stacktrace: {ex.Message}", LogLevel.Warning);
        //     }
        // }
        return hash;
    }
}
